# mtgo_stats

./: .gitignore  Dockerfile  README.md  cli.py  docker-compose.yml  pyproject.toml  requirements.txt  rest.py
adapters/: __init__.py  mtgo_api.py  repository.py
adapters/mtgo/: __init__.py  api.py  client.py
domain/: model.py  rules.py  stats.py  tournaments.py
entrypoints/: main.py
routers/: stats.py
service_layer/: dependencies.py  services.py  stats.py
snippets/: calc_current_stats.py  mtgo.py  table_stuff.html  url_reversing.py
tests/: conftest.py  fakes.py
tests/data/: r.json  regenerate_test_data.py  response_tournament.html  response_tournament_challenge_64.html  response_tournament_data_challenge_32_census.json  response_tournament_data_preliminary.json  response_tournaments_page.html
tests/integration/: test_mtgo.py  test_repository.py
tests/unit/: test_cli.py  test_identify.py  test_mtgo.py  test_mtgo_parsing.py  test_routers.py  test_stats.py  tournament_data.json
